kubernetes/manifests/ingress-controllers.yaml
---
# Public Ingress Controller - für öffentlich erreichbare Apps
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx-public
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: public
---
# Internal Ingress Controller - für interne Apps (VPN-Zugriff)
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx-internal
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: internal
    name: ingress-nginx-internal
